# VisionTransformer

./: .gitignore  CMakeLists.txt  README.md  run.sh  vit_mnist_test.weights  vit_results.csv
app/: main.cpp  miniplataforma.cpp  realTime  realTime.cpp  test.cpp  testImage.cpp  testLabel.cpp  tl.cpp  visualizer.cpp
cuda/: CMakeLists.txt  main.cu  test.cu  train.sh
cuda/include/activations/: GELU.cuh  RELU.cuh
cuda/include/core/: Tensor.cuh
cuda/include/layers/: Dense.cuh  Embeddings.cuh  FeedForward.cuh  Layer.cuh  LayerNorm.cuh  MultiHeadAttention.cuh  PatchEmbedding.cuh
cuda/include/losses/: CrossEntropy.cuh  Loss.cuh
cuda/include/model/: Trainer.cuh  TransformerEncoderBlock.cuh  VisionTransformer.cuh
cuda/include/optimizers/: Adam.cuh  Optimizer.cuh
cuda/include/utils/: DataReader.cuh
cuda/src/activations/: GELU.cu  RELU.cu
cuda/src/core/: Tensor.cu
cuda/src/layers/: Dense.cu  Embeddings.cu  FeedForward.cu  LayerNorm.cu  MultiHeadAttention.cu  PatchEmbedding.cu
cuda/src/losses/: CrossEntropy.cu
cuda/src/model/: Trainer.cu  TransformerEncoderBlock.cu  VisionTransformer.cu
cuda/src/optimizers/: Adam.cu
cuda/src/utils/: DataReader.cu
cuda2/: CMakeLists.txt  Logits.txt  Probabilidades.txt  README.md  X_batch.txt  log.txt  run.sh  vit_mnist_test.json  y_batch.txt
cuda2/app/: main.cpp  test copy.cpp  test.cpp  testImage.cpp
cuda2/include/core/: Tensor.cuh  TensorCPU.hpp
cuda2/include/layers/: Layer.hpp  LayerNorm.hpp
cuda2/include/losses/: CrossEntropy.hpp  Loss.hpp
cuda2/include/model/: Trainer.hpp  TransformerEncoderBlock.hpp
cuda2/include/optimizers/: Optimizer.hpp
cuda2/include/utils/: DataAugmentation.hpp  DataReader.hpp
cuda2/models/: vit_mnist_test.weights
cuda2/src/activations/: GELU.cpp  ReLU.cpp
cuda2/src/core/: Tensor.cu  TensorCPU.cpp
cuda2/src/layers/: Dense.cpp  Dropout.cpp  Embeddings.cpp  FeedForward.cpp  LayerNorm.cpp  MultiHeadAttention.cpp  PatchEmbedding.cpp
cuda2/src/losses/: CrossEntropy.cpp
cuda2/src/model/: Trainer.cpp  TransformerEncoderBlock.cpp  VisionTransformer.cpp
cuda2/src/optimizers/: Adam.cpp
cuda2/src/utils/: DataReader.cpp  ModelUtils.cpp
cuda_Vit/: .gitignore  CMakeLists.txt  run.sh
cuda_Vit/app/: main.cpp  main.cu  realTime.cpp  test.cpp  test.cu  testImage.cu  testLabel.cpp  testLabel.cu
cuda_Vit/include/activations/: GELU.hpp  ReLU.hpp
cuda_Vit/include/layers/: Conv2d.hpp  Dense.hpp  FeedForward.hpp  Layer.hpp  MultiHeadAttention.hpp
cuda_Vit/include/losses/: CrossEntropy.hpp
cuda_Vit/include/model/: Trainer.hpp  VisionTransformer.cuh  VisionTransformer.hpp
cuda_Vit/include/optimizers/: Optimizer.hpp
cuda_Vit/include/utils/: CudaUtils.hpp  DataReader.hpp  ModelUtils.hpp
cuda_Vit/models/: vit_blood_gray_test.weights  vit_blood_gray_test_best.json  vit_blood_gray_test_best.weights  vit_blood_gray_test_results.csv  vit_blood_rgb_test.weights  vit_blood_rgb_test_best.json  vit_blood_rgb_test_best.weights  vit_blood_rgb_test_results.csv  vit_fashion_test_best.json  vit_fashion_test_results.csv  vit_mnist_test.weights  vit_mnist_test_best.json  vit_mnist_test_new.weights  vit_mnist_test_results.csv
cuda_Vit/src/activations/: GELU.cpp
cuda_Vit/src/core/: Tensor.cpp
cuda_Vit/src/layers/: Conv2d.cpp  Embeddings.cpp  FeedForward.cpp  LayerNorm.cpp
cuda_Vit/src/model/: Trainer.cpp  Trainer.cu  TransformerEncoderBlock.cpp  VisionTransformer.cpp
cuda_Vit/src/optimizers/: Adam.cpp
cuda_Vit/src/utils/: CudaUtils.cu  DataReader.cpp  ModelUtils.cpp
include/: Visualizer.hpp
include/core/: Tensor.hpp
include/layers/: Conv2D.hpp  Dropout.hpp  Embeddings.hpp  FeedForward.hpp  LayerNorm.hpp  PatchEmbedding.hpp
include/losses/: CrossEntropy.hpp  Loss.hpp
include/model/: Trainer.hpp  TransformerEncoderBlock.hpp  VisionTransformer.hpp
include/optimizers/: Adam.hpp  Optimizer.hpp  SGD.hpp  Scheduler.hpp
include/utils/: CudaUtils.hpp  DataAugmentation.hpp  DataReader.hpp  ModelUtils.hpp
models/: vit_mnist_30ep_2_4.json  vit_mnist_30ep_2_4.weights  vit_mnist_30ep_4_8.weights  vit_mnist_4_8.json  vit_mnist_test.json  vit_mnist_test.weights  vit_results.csv
src/: Visualizer.cpp
src/activations/: GELU.cpp  ReLU.cpp
src/core/: Tensor.cpp
src/layers/: Conv2D.cpp  Conv2d.cpp  Dense.cpp  Dropout.cpp  Embeddings.cpp  FeedForward.cpp  LayerNorm.cpp  MultiHeadAttention.cpp  PatchEmbedding.cpp
src/losses/: CrossEntropy.cpp
src/model/: Trainer.cpp  TransformerEncoderBlock.cpp  VisionTransformer.cpp
src/utils/: CudaUtils.cu  DataAugmentation.cpp  DataReader.cpp  ModelUtils.cpp
